--- a/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
+++ b/src/app/pages/e-learning-membership/components/config/config-detail/config-detail.component.html
@@ -93,16 +93,14 @@
 
         <div nz-col [nzSpan]="24">
           <div class="text-label">
-            KPI & {{'commissions' | translate}}
+            {{'kpi_commissions' | translate}}
           </div>
 
-          <button nz-button nzType="primary" nz-tooltip nzTooltipTitle="Thêm mức" style="margin-right: 5px"
-            class="add-gb-btn" (click)="addBonus()">
+          <button nz-button nzType="primary" nz-tooltip nzTooltipTitle="{{'add_level'}}" style="margin-right: 5px" class="add-gb-btn" (click)="addBonus()">
             <span nz-icon nzType="plus"></span>
           </button>
 
-          <nz-table class="benefit-table" [nzData]="listBonus" [nzFrontPagination]="false"
-            [nzTemplateMode]="listBonus.length > 0">
+          <nz-table class="benefit-table" [nzData]="listBonus" [nzFrontPagination]="false" [nzTemplateMode]="listBonus.length > 0">
             <thead>
               <tr>
                 <th nzAlign="center" nzWidth="10%">
@@ -120,16 +118,13 @@
                 <tr>
                   <td nzAlign="center">{{'level' | translate}} {{i+1}}</td>
                   <td nzAlign="center">
-                    <nz-input-number [nzMin]="1" [nzStep]="1" nzBorderless [(ngModel)]="bonus.commissionPercentage"
-                      [ngModelOptions]="{standalone: true}"></nz-input-number>
+                    <nz-input-number [nzMin]="1" [nzStep]="1" nzBorderless [(ngModel)]="bonus.commissionPercentage" [ngModelOptions]="{standalone: true}"></nz-input-number>
                   </td>
                   <td nzAlign="center">
-                    <nz-input-number [nzMin]="1" [nzStep]="1" nzBorderless [(ngModel)]="bonus.countTransaction"
-                      [ngModelOptions]="{standalone: true}"></nz-input-number>
+                    <nz-input-number [nzMin]="1" [nzStep]="1" nzBorderless [(ngModel)]="bonus.countTransaction" [ngModelOptions]="{standalone: true}"></nz-input-number>
                   </td>
                   <td nzAlign="center">
-                    <button nz-button nz-tooltip nzTooltipTitle="{{'remove' | translate}}" class="delete-btn"
-                      (click)="removeBonus(i)">
+                    <button nz-button nz-tooltip nzTooltipTitle="{{'remove' | translate}}" class="delete-btn" (click)="removeBonus(i)">
                       <span nz-icon nzType="delete"></span>
                     </button>
                   </td>
@@ -148,8 +143,7 @@
             {{'add_perk_group' | translate}}
           </button>
 
-          <nz-table class="benefit-table" [nzData]="benefitList" [nzFrontPagination]="false"
-            [nzTemplateMode]="benefitList.length > 0">
+          <nz-table class="benefit-table" [nzData]="benefitList" [nzFrontPagination]="false" [nzTemplateMode]="benefitList.length > 0">
             <thead>
               <tr>
                 <th nzAlign="center" nzWidth="50%">
@@ -163,19 +157,14 @@
               <ng-container *ngFor="let benefitObj of benefitList; index as i">
                 <tr style="background: #E6E4ED">
                   <td>
-                    <input nz-input class="group-name" placeholder="{{ 'perk_group' | translate }}"
-                      [(ngModel)]="benefitObj.name" [ngModelOptions]="{standalone: true}">
+                    <input nz-input class="group-name" placeholder="{{ 'perk_group' | translate }}" [(ngModel)]="benefitObj.name" [ngModelOptions]="{standalone: true}">
                   </td>
                   <td nzAlign="center" *ngFor="let policy of policyList"></td>
                   <td nzAlign="center">
-                    <button nz-button nzType="primary" nz-tooltip
-                      nzTooltipTitle="{{ 'add' | translate}} {{ 'perk' | translate}}"
-                      (click)="addBenefit(benefitObj.benefits, i)" style="margin-right: 5px">
+                    <button nz-button nzType="primary" nz-tooltip nzTooltipTitle="{{ 'add' | translate}} {{ 'perk' | translate}}" (click)="addBenefit(benefitObj.benefits, i)" style="margin-right: 5px">
                       <span nz-icon nzType="plus"></span>
                     </button>
-                    <button nz-button nz-tooltip
-                      nzTooltipTitle="{{ 'remove' | translate }} {{'perk_group' | translate}}"
-                      (click)="removeGroupBenefit(i)" style="margin-left: 5px" class="delete-btn">
+                    <button nz-button nz-tooltip nzTooltipTitle="{{ 'remove' | translate }} {{'perk_group' | translate}}" (click)="removeGroupBenefit(i)" style="margin-left: 5px" class="delete-btn">
                       <span nz-icon nzType="delete"></span>
                     </button>
                   </td>
@@ -185,19 +174,15 @@
                     <div class="editable-cell" [hidden]="editId === benefit.id" (click)="startEdit(benefit.id)">
                       {{ benefit.title }}
                     </div>
-                    <textarea nz-input [(ngModel)]="benefit.title" [ngModelOptions]="{standalone: true}"
-                      [hidden]="editId !== benefit.id" type="text" (blur)="stopEdit()"
-                      placeholder="Tên quyền lợi"></textarea>
+                    <textarea nz-input [(ngModel)]="benefit.title" [ngModelOptions]="{standalone: true}" [hidden]="editId !== benefit.id" type="text" (blur)="stopEdit()" placeholder="Tên quyền lợi"></textarea>
                   </td>
 
                   <td nzAlign="center" *ngFor="let policy of policyList">
-                    <input type="checkbox" (click)="onChecked(policy.id, benefit.memberPolicyIds)"
-                      [checked]="updateSingleChecked(policy.id, benefit.memberPolicyIds)">
+                    <input type="checkbox" (click)="onChecked(policy.id, benefit.memberPolicyIds)" [checked]="updateSingleChecked(policy.id, benefit.memberPolicyIds)">
                   </td>
 
                   <td nzAlign="center">
-                    <button nz-button nz-tooltip nzTooltipTitle="{{ 'remove' | translate }} {{'perk' | translate}}"
-                      (click)="removeBenefit(i, iB)" class="delete-btn">
+                    <button nz-button nz-tooltip nzTooltipTitle="{{ 'remove' | translate }} {{'perk' | translate}}" (click)="removeBenefit(i, iB)" class="delete-btn">
                       <span nz-icon nzType="delete"></span>
                     </button>
                   </td>
