--- a/src/app/pages/e-learning-student/components/studying-e-student/studying-e-student.component.html
+++ b/src/app/pages/e-learning-student/components/studying-e-student/studying-e-student.component.html
@@ -1,5 +1,5 @@
 <div class="title-page">
-{{ 'learning_e_learners' | translate }}
+{{ 'studying_e_learners' | translate }}
 </div>
 
 <div class="header-btn">
