--- a/src/app/pages/website-config/components/configs/list-config/list-config.component.html
+++ b/src/app/pages/website-config/components/configs/list-config/list-config.component.html
@@ -17,7 +17,7 @@
       <table-column header="{{ 'no' | translate }}" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="{{ 'organization' | translate }}" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="{{ 'organization_email' | translate }}" key="organizationEmail" [width]="'200px'"></table-column>
-      <table-column header="{{ 'organization_phone' | translate }}" key="organizationPhoneNumber" [width]="'200px'"></table-column>
+      <table-column header="{{ 'organization_phone_number' | translate }}" key="organizationPhoneNumber" [width]="'200px'"></table-column>
       <table-column header="{{ 'organization_representative' | translate }}" key="representativeName" [width]="'200px'"></table-column>
 
       <table-column [width]="'180px'" fixColumn="right" >
