--- a/src/app/pages/e-learning-student/components/registering-e-student/registering-e-student.component.html
+++ b/src/app/pages/e-learning-student/components/registering-e-student/registering-e-student.component.html
@@ -25,8 +25,8 @@
       <table-column header="{{ 'organization' | translate }}" key="organizationName" [width]="'200px'"></table-column>
       <table-column header="{{ 'payment_status' | translate }}" key="status" [width]="'180px'">
         <ng-template appCell let-data>
-          <span class="text-valid" *ngIf="data.status">Đã thanh toán</span>
-          <span class="text-invalid" *ngIf="!data.status">Chưa thanh toán</span>
+          <span class="text-valid" *ngIf="data.status">{{'fully_paid' | translate}}</span>
+          <span class="text-invalid" *ngIf="!data.status">{{'unpaid' | translate}}</span>
         </ng-template>
       </table-column>
       <table-column [width]="'180px'" fixColumn="right" >
