--- a/src/app/pages/email/components/email-queue/email-queue.component.html
+++ b/src/app/pages/email/components/email-queue/email-queue.component.html
@@ -5,22 +5,12 @@
 <div class="header-btn">
   <ng-container *ngIf="(emailQueue$ | async) as email">
     <nz-collapse class="filter-form" [class.expand]="isExpand">
-      <nz-collapse-panel [nzHeader]="'filter' | translate"  (nzActiveChange)="setExpand($event)">
-        <app-filter-form
-          [filterData]="listOfColumn" (getFilterData)="handleFilterForm($event)"></app-filter-form>
+      <nz-collapse-panel [nzHeader]="'filter' | translate" (nzActiveChange)="setExpand($event)">
+        <app-filter-form [filterData]="listOfColumn" (getFilterData)="handleFilterForm($event)"></app-filter-form>
       </nz-collapse-panel>
     </nz-collapse>
 
-    <app-table
-      [rows]="email.rows"
-      [page]="email.page"
-      [pageSize]="email.pageSize"
-      [pageTotal]="email.rowTotal"
-      [clientPagination]="false"
-      (pageIndexChange)="page$.next($event)"
-      (pageSizeChange)="pageSize$.next($event)"
-      [loading]="loading"
-    >
+    <app-table [rows]="email.rows" [page]="email.page" [pageSize]="email.pageSize" [pageTotal]="email.rowTotal" [clientPagination]="false" (pageIndexChange)="page$.next($event)" (pageSizeChange)="pageSize$.next($event)" [loading]="loading">
       <table-column header="{{ 'no' | translate }}" key="id" [dataType]="COL_DATA_TYPE.INDEX" [width]="'80px'" fixColumn="left"></table-column>
       <table-column header="{{ 'time' | translate }}" key="sendTime" [dataType]="COL_DATA_TYPE.DATE" [width]="'200px'"></table-column>
       <table-column header="{{ 'organization' | translate }}" key="organizationName" [width]="'200px'"></table-column>
@@ -30,23 +20,25 @@
       <table-column header="{{ 'sent_count' | translate }}" key="number" [width]="'200px'"></table-column>
       <table-column header="{{ 'status' | translate }}" key="isSend" [width]="'200px'">
         <ng-template appCell let-data>
-          <span class="text-valid" *ngIf="data.isSend">Đã gửi</span>
-          <span class="text-invalid" *ngIf="!data.isSend">Chưa gửi</span>
+          <span class="text-valid" *ngIf="data.isSend">
+            {{'sent' | translate}}
+          </span>
+          <span class="text-invalid" *ngIf="!data.isSend">
+            {{'unsend' | translate}}
+          </span>
         </ng-template>
       </table-column>
-      <table-column [width]="'180px'" fixColumn="right" >
+      <table-column [width]="'180px'" fixColumn="right">
         <ng-template appHeader>
           {{ 'actions' | translate }}
         </ng-template>
 
         <ng-template appCell let-data>
-          <span class="custom-action" (click)="getDetailEmail(data, EmailContent)"
-                nz-tooltip nzTooltipTitle="Xem nội dung email">
+          <span class="custom-action" (click)="getDetailEmail(data, EmailContent)" nz-tooltip nzTooltipTitle="{{ 'view_email_content' | translate }}">
             <span nz-icon nzType="profile" nzTheme="outline"></span>
           </span>
 
-          <span class="custom-action" (click)="resendEmail(data)"
-                nz-tooltip nzTooltipTitle="{{ 'send' | translate }} lại">
+          <span class="custom-action" (click)="resendEmail(data)" nz-tooltip nzTooltipTitle="{{ 'resend' | translate }}">
             <span nz-icon nzType="rollback" nzTheme="outline"></span>
           </span>
         </ng-template>
