--- a/src/app/pages/organization/components/permission-organization/permission-organization.component.html
+++ b/src/app/pages/organization/components/permission-organization/permission-organization.component.html
@@ -1,10 +1,12 @@
 <div class="title-page">
-  Phân quyền tổ chức
+  {{'permissions_of_organization' | translate}}
 </div>
 
 <div nz-row>
   <div nz-col [nzSpan]="20">
-    <span class="text-label">Danh sách quyền chọn</span>
+    <span class="text-label">
+      {{'pick_permissions' | translate}}
+    </span>
 
     <div class="permission-picker">
       <div nz-row  *ngFor="let permission of listPermission" class="permission-group">
@@ -32,7 +34,7 @@
   <div nz-col [nzSpan]="4">
     <div class="btn-panel">
       <button class="btn primary" nz-button (click)="edit()">
-        Lưu
+        {{'save' | translate}}
       </button>
       <button class="btn" nz-button (click)="navigateBack()">
         {{'cancel'|translate}}
