--- a/src/app/pages/report/funnel-report/dialog/filter-elearning-course-report/filter-elearning-course-report.component.html
+++ b/src/app/pages/report/funnel-report/dialog/filter-elearning-course-report/filter-elearning-course-report.component.html
@@ -26,7 +26,7 @@
                 <div style="width: 100%;display: flex;">
                     <nz-date-picker nzMode="year" formControlName="quarterYearCtrl" [nzAllowClear]="true"
                         style="margin-right: 10px;width: 50%;"></nz-date-picker>
-                    <nz-select nzPlaceHolder="---Chọn---" formControlName="quarterOfYearCtrl" style="width: 50%;"
+                    <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="quarterOfYearCtrl" style="width: 50%;"
                         [nzAllowClear]="true">
                         <nz-option *ngFor="let option of lstQuarterOfYear" [nzValue]="option.value"
                             [nzLabel]="option.label"></nz-option>
@@ -44,7 +44,7 @@
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>{{ 'course_name' | translate }}</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="courseNameCtrl" class="w-100" nzAllowClear
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="courseNameCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.coursesResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
@@ -54,7 +54,7 @@
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>Tổ chức</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="organizationNameCtrl" class="w-100" nzAllowClear
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="organizationNameCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.organizationsResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
@@ -66,7 +66,7 @@
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>{{ 'teacher_name' | translate }}</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="speakerNameCtrl" class="w-100" nzAllowClear
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="speakerNameCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.speakersResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
@@ -76,7 +76,7 @@
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>Số điện thoại</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="phoneNumberCtrl" class="w-100" nzAllowClear
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="phoneNumberCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.phonesResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
