--- a/src/app/pages/report/funnel-report/dialog/filter-funnel-course-report/filter-funnel-course-report.component.html
+++ b/src/app/pages/report/funnel-report/dialog/filter-funnel-course-report/filter-funnel-course-report.component.html
@@ -25,7 +25,7 @@
                 <div style="width: 100%;display: flex;">
                     <nz-date-picker nzMode="year" formControlName="quarterYearCtrl"
                         style="margin-right: 10px;width: 50%;"></nz-date-picker>
-                    <nz-select nzPlaceHolder="---Chọn---" formControlName="quarterOfYearCtrl" style="width: 50%;">
+                    <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="quarterOfYearCtrl" style="width: 50%;">
                         <nz-option *ngFor="let option of lstQuarterOfYear" [nzValue]="option.value"
                             [nzLabel]="option.label"></nz-option>
                     </nz-select>
@@ -42,7 +42,7 @@
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>{{ 'course_name' | translate }}</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="courseNameCtrl" class="w-100" nzAllowClear
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="courseNameCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.coursesResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
@@ -52,7 +52,7 @@
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>Tổ chức</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="organizationNameCtrl" class="w-100" nzAllowClear
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="organizationNameCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.organizationsResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
@@ -64,7 +64,7 @@
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>{{ 'teacher_name' | translate }}</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="speakerNameCtrl" class="w-100" nzAllowClear
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="speakerNameCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.speakersResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
@@ -74,7 +74,7 @@
         <div nz-col [nzSpan]="12">
             <nz-form-item>
                 <nz-form-label>Số điện thoại</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="phoneNumberCtrl" class="w-100" nzAllowClear
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="phoneNumberCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.phonesResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
@@ -87,7 +87,7 @@
         <div nz-col [nzSpan]="24">
             <nz-form-item>
                 <nz-form-label>{{ 'class' | translate }} học</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="classCtrl" class="w-100" nzAllowClear
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="classCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.classesResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
