--- a/src/app/pages/student/components/waiting-student/waiting-student.component.html
+++ b/src/app/pages/student/components/waiting-student/waiting-student.component.html
@@ -33,18 +33,18 @@
       <table-column header="{{ 'price' | translate }}" key="price" [width]="'150px'"></table-column>
       <table-column header="{{ 'payment_status' | translate }}" key="isPay" [width]="'180px'">
         <ng-template appCell let-data>
-          <span *ngIf="data.isPay === 0">Chưa thanh toán</span>
-          <span *ngIf="data.isPay === 1">Đã thanh toán</span>
-          <span *ngIf="data.isPay === 2">Thanh toán một phần</span>
-          <span *ngIf="data.isPay === 3">Thanh toán thừa</span>
-          <span *ngIf="data.isPay === 4">Hoàn học phí</span>
-          <span *ngIf="data.isPay === 5">Hoàn tiền thừa</span>
+          <span *ngIf="data.isPay === 0">{{'unpaid' | translate}}</span>
+          <span *ngIf="data.isPay === 1">{{'fully_paid' | translate}}</span>
+          <span *ngIf="data.isPay === 2">{{'partial_paid' | translate}}</span>
+          <span *ngIf="data.isPay === 3">{{'over_paid' | translate}}</span>
+          <span *ngIf="data.isPay === 4">{{'tutiton_refunded' | translate}}</span>
+          <span *ngIf="data.isPay === 5">{{'excess_refunded' | translate}}</span>
         </ng-template>
       </table-column>
       <table-column header="{{ 'payment_verification' | translate }}" key="isVerifyPay" [width]="'180px'">
         <ng-template appCell let-data>
-          <span class="text-invalid" *ngIf="!data.isVerifyPay">Chưa xác thực</span>
-          <span class="text-valid" *ngIf="data.isVerifyPay">Đã xác thực</span>
+          <span class="text-invalid" *ngIf="!data.isVerifyPay">{{'unverified' | translate}}</span>
+          <span class="text-valid" *ngIf="data.isVerifyPay">{{'verified' | translate}}</span>
         </ng-template>
       </table-column>
       <table-column header="{{ 'learner_name' | translate }}" key="name" [width]="'180px'"></table-column>
@@ -62,14 +62,14 @@
 
       <table-column header="{{ 'email_verification' | translate }}" key="isAuthEmail" [width]="'180px'">
         <ng-template appCell let-data>
-          <span class="text-valid" *ngIf="data.isAuthEmail">Đã xác thực</span>
-          <span class="text-invalid" *ngIf="!data.isAuthEmail">Chưa xác thực</span>
+          <span class="text-valid" *ngIf="data.isAuthEmail">{{'verified' | translate}}</span>
+          <span class="text-invalid" *ngIf="!data.isAuthEmail">{{'unverified' | translate}}</span>
         </ng-template>
       </table-column>
       <table-column header="{{ 'status' | translate }}" key="isAccount" [width]="'180px'">
         <ng-template appCell let-data>
-          <span class="text-valid" *ngIf="data.isAccount">Có tài khoản</span>
-          <span class="text-invalid" *ngIf="!data.isAccount">Chưa có tài khoản</span>
+          <span class="text-valid" *ngIf="data.isAccount">{{'has_account' | translate}}</span>
+          <span class="text-invalid" *ngIf="!data.isAccount">Chưa {{'has_account' | translate}}</span>
         </ng-template>
       </table-column>
 
