--- a/src/app/pages/transaction/dialog-filter-transaction/dialog-filter-transaction.component.html
+++ b/src/app/pages/transaction/dialog-filter-transaction/dialog-filter-transaction.component.html
@@ -9,8 +9,10 @@
         </div>
         <div nz-col [nzSpan]="12">
             <nz-form-item>
-                <nz-form-label>Theo học viên</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="customerIdCtrl" class="w-100" nzAllowClear
+                <nz-form-label>
+                    {{'by_learners' | translate }}
+                </nz-form-label>
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="customerIdCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.usersStudent" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
@@ -21,8 +23,10 @@
     <div nz-row [nzGutter]="24">
         <div nz-col [nzSpan]="12">
             <nz-form-item>
-                <nz-form-label>Loại gói</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="priceMemberPolicyTypeCtrl" class="w-100"
+                <nz-form-label>
+                    {{'package_type' | translate }}
+                </nz-form-label>
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="priceMemberPolicyTypeCtrl" class="w-100"
                     nzAllowClear nzShowSearch>
                     <nz-option *ngFor="let item of lstMemberPriceType" [nzValue]="item.value"
                         [nzLabel]="item.label!"></nz-option>
@@ -31,8 +35,8 @@
         </div>
         <div nz-col [nzSpan]="12">
             <nz-form-item>
-                <nz-form-label>{{ 'status' | translate }} đơn hàng</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="paymentStatusCtrl" class="w-100" nzAllowClear
+                <nz-form-label>{{ 'status' | translate }} {{'orders' | translate }}</nz-form-label>
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="paymentStatusCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of lstOrderPaymentStatus" [nzValue]="item.value"
                         [nzLabel]="item.label!"></nz-option>
@@ -43,8 +47,10 @@
     <div nz-row [nzGutter]="24">
         <div nz-col [nzSpan]="12">
             <nz-form-item>
-                <nz-form-label>Phương thức thanh toán</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="paymentMethodCtrl" class="w-100" nzAllowClear
+                <nz-form-label>
+                    {{'payment_method' | translate }}
+                </nz-form-label>
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="paymentMethodCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of lstPaymentMethod" [nzValue]="item.value"
                         [nzLabel]="item.label!"></nz-option>
@@ -53,8 +59,10 @@
         </div>
         <div nz-col [nzSpan]="12">
             <nz-form-item>
-                <nz-form-label>Tổ chức</nz-form-label>
-                <nz-select nzPlaceHolder="---Chọn---" formControlName="organizationIdCtrl" class="w-100" nzAllowClear
+                <nz-form-label>
+                    {{'organization' | translate}}
+                </nz-form-label>
+                <nz-select nzPlaceHolder="---{{'pick' | translate }}---" formControlName="organizationIdCtrl" class="w-100" nzAllowClear
                     nzShowSearch>
                     <nz-option *ngFor="let item of dropModel.organizationsResponse" [nzValue]="item.id"
                         [nzLabel]="item.name!"></nz-option>
@@ -64,8 +72,9 @@
     </div>
     <div nz-row class="header-btn">
         <div nz-col [nzSpan]="24" class="search-area">
-            <button nz-button type="button" [nzType]="'primary'" (click)="onSave()" style="margin-right: 10px;">Áp
-                dụng</button>
+            <button nz-button type="button" [nzType]="'primary'" (click)="onSave()" style="margin-right: 10px;">
+                {{ 'apply' | translate }}
+            </button>
             <button nz-button class="btn-form excel" (click)="onSave(true)" style="margin-right: 10px;">
                 {{ 'export_to_excel' | translate }}
                 <span nz-icon nzType="file-excel" nzTheme="outline"></span>
